Fixed: Page number jump

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -59,3 +59,8 @@
     flex-direction: column;
   }
 }
+
+.error-msg {
+  font-size: 14px;
+  color: red;
+}
